@@ -37,7 +37,7 @@
 			<IMG SRC="img/calendar.gif" ALT="" BORDER="0" ALIGN="absmiddle">
 		</TD>
 		<TD WIDTH="1%" NOWRAP>
-			<B>{t}Payment day:{/t}:</B>
+			<B>{t}Payment day:{/t}</B>
 		</TD>
 		<TD WIDTH="98%" CLASS="fright">								
 			{$payment.payday}
@@ -66,7 +66,7 @@
 				<INPUT TYPE="HIDDEN" NAME="addbalance[comment]" VALUE="{$payment.name} / {$payment.creditor}">
 				<A HREF="?m=paymentedit&id={$payment.id}">{t}Edit{/t} <IMG SRC="img/edit.gif" BORDER="0" ALIGN="absmiddle" ALT=""></A>
 				<A HREF="?m=paymentlist">{t}Cancel{/t} <IMG SRC="img/cancel.gif" BORDER="0" ALIGN="absmiddle" ALT=""></A>
-				<A HREF="javascript:document.addbalance.submit();">{t}Account payment{/t} <IMG SRC="img/save.gif" ALT="" ALIGN="absmiddle" BORDER="0"></A>
+				<A HREF="javascript:document.addbalance.submit();">{t}Account payment{/t} <IMG SRC="img/pay.gif" ALT="" ALIGN="absmiddle" BORDER="0"></A>
 			</FORM></P>
 		</TD>
 	</TR>
